--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
 <%= @post.content %>
 
 <% if current_user?(@post.user) %>
-<h1><%= t 'views.posts.show.Comment below!' %></h1>
+<h1><%= t 'views.posts.show.You got Comment below!' %></h1>
 <%= render @post.scomments %>
 <% end %>
 
