--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,5 @@
 ＞＞posts/newページはじまり。
 <% provide(:title, 'New post') %>
 <section class="post_form">
-  <%= render 'shared/post_form' %>
+  <%= render 'posts/post_form' %>
 </section>
-＜＜posts/newページおわり。
