--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,8 +5,8 @@
 ＞＞homeページからshared/statsページへ。
 <%= render 'shared/stats' %>
 
-＞＞homeページからshared/post_formページへ。
-<%= render 'shared/post_form' %>
+＞＞homeページからposts/post_formページへ。
+<%= render 'posts/post_form' %>
 
 <h3>My Feed</h3>
 ＞＞homeページからshared/feedページへ。
