--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
 ＜＜posts/showページはじまり。
+
 <h1><%= t 'views.posts.show.My posts' %></h1>
 <%= @post.content %>
 
@@ -9,6 +10,5 @@
 
 <% if logged_in? && current_user.stylist? %>
 <h1>Send Styling from here!</h1>
-<%= render 'shared/scomment_form' %>
+<%= render 'scomments/scomment_form' %>
 <% end %>
-＞＞posts/showページおわり。
