favoriteをindexでみれるようにし、Homeのstatにあるfavoriteボタンから、その一覧に飛ぶようにした。

--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,3 +1,6 @@
-<section class="favorites">
-  <%= render 'shared/favorites' %>
-</section>
+favorite一覧
+
+<% @user.scomments.each do |scomment| %>
+<%= scomment.content %>
+<%= link_to scomment.user.name, scomment.user %>
+<% end %>
