--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,6 +13,7 @@
   <% end %>
 </li>
 
+ここに、このPostに対するコメントを入れる。
 
 <% if logged_in? && current_user.stylist? %>
 <%= link_to 'Send Styling!', post %>
