すべてのページ遷移がわかりやすいようにヘッダー、フッターにボタン（ページ入り口）リンクを並べた。

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,13 @@
 <div class="ui segment">
-English
-日本語
-    <%= link_to "About",   about_path %>
-    <%= link_to "Contact", contact_path %>
-    <a href="http://news.railstutorial.org/">News</a>
+
+<button class="ui orange basic button"><%= link_to "English", users_path %></button>
+<button class="ui orange basic button"><%= link_to "日本語", users_path %></button>
+
+<button class="ui orange basic button"><%= link_to "About", about_path %></button>
+<button class="ui orange basic button"><%= link_to "Contact", contact_path %></button>
+<button class="ui orange basic button"><%= link_to "Private Policy", users_path %></button>
+<button class="ui orange basic button"><%= link_to "About Stylist", stylists_path %></button>
+
+copylight.
+
 </div>
