--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,23 +1,41 @@
 <div class="ui segment">
-<%= link_to "Stylatte", root_path, id: "logo" %>
+<button class="ui green basic button"><%= link_to "Home", root_path, id: "logo" %></button>
 
-<%= link_to "Ask a new styling", new_post_path %>
+<button class="ui green basic button"><%= link_to "All Post", posts_path %></button>
+<button class="ui green basic button"><%= link_to "Post New", new_post_path %></button>
+
+
 <% if logged_in? && current_user.stylist? %>
-<%= link_to "Post a Styling", new_post_path %>
+<button class="ui red basic button"><%= link_to "My Scomments", new_post_path %></button>
+<button class="ui red basic button"><%= link_to "Given Scomments", new_post_path %></button>
+<button class="ui red basic button"><%= link_to "Scomment New", new_post_path %></button>
+
 <% else %>
-<%= link_to "Become a Stylist", stylists_path %>
+<button class="ui green basic button"><%= link_to "Become a Stylist", stylists_path %></button>
+
 <% end %>
 
-<%= link_to "Find Users", users_path %>
-<%= link_to "Home", root_path %>
-<%= link_to "Docs", help_path %>
+<button class="ui orange basic button"><%= link_to "Notes New", users_path %></button>
+<button class="ui orange basic button"><%= link_to "My Notes", users_path %></button>
+<button class="ui orange basic button"><%= link_to "Activity Graph", users_path %></button>
+
+
+<button class="ui green basic button"><%= link_to "Find Users", users_path %></button>
+<button class="ui green basic button"><%= link_to "Home", root_path %></button>
+<button class="ui green basic button"><%= link_to "Docs", help_path %></button>
+
+<button class="ui green basic button"><%= link_to "Following", following_user_path(current_user) %></button>
+<button class="ui green basic button"><%= link_to "Followers", followers_user_path(current_user) %></button>
+
+<button class="ui green basic button"><%= link_to "My favorites", favorites_path(current_user) %></button>
+
 
 <% if logged_in? %>
-<%= link_to current_user.name, users_path %>
-<%= link_to "Edit profile", edit_user_path(current_user) %>
-<%= link_to "Log out", logout_path, method: "delete" %>
+<button class="ui red basic button"><%= link_to current_user.name, users_path %></button>
+<button class="ui green basic button"><%= link_to "Edit profile", edit_user_path(current_user) %></button>
+<button class="ui green basic button"><%= link_to "Log out", logout_path, method: "delete" %></button>
 <%= link_to gravatar_for(current_user, size: 50), current_user %>
 <% else %>
-<%= link_to "Log in", login_path %>
+<button class="ui green basic button"><%= link_to "Log in", login_path %></button>
 <% end %>
 </div>
