--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -29,14 +29,10 @@ Statページスタート＞＞
     </a>
   </div>
 
-  <div class="ui labeled button" tabindex="0">
-    <div class="ui button">
+ここは、このままでは、starをつけた人のレコードを数えている。(starをもらった人のレコード数にする。)
       <i class="star icon"></i> Star
-    </div>
-    <a class="ui basic label">
       <%= @user.ratings.count %>
-    </a>
-  </div>
+
 
 
 </div>
