--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,11 @@
 <% provide(:title, "Contact") %>
 <h1>Contact</h1>
+
+Business contact
+Press contact
+Investiment
+Advertisement
+
 <p>
   Contact the Ruby on Rails Tutorial about the sample app at the
   <a href="http://www.railstutorial.org/#contact">contact page</a>.
