--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -14,7 +14,7 @@
 </li>
 
 ここに、このPostに対するコメントを入れる。
-
+<%= link_to 'このPostの詳細', post %>
 <% if logged_in? && current_user.stylist? %>
 <%= link_to 'Send Styling!', post %>
 <% else %>
