--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 
 <%= render 'shared/stats' %>
 
-<%= render 'shared/favorites' %>
+<%= render 'scomments/got_scomments' %>
 <%= render 'follow_form' if logged_in? %>
 
 <% if @user.posts.any? %>
