--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,6 +7,7 @@
 <button class="ui orange basic button"><%= link_to "Contact", contact_path %></button>
 <button class="ui orange basic button"><%= link_to "Private Policy", users_path %></button>
 <button class="ui orange basic button"><%= link_to "About Stylist", stylists_path %></button>
+<button class="ui orange basic button"><%= link_to "Share on SNS", about_path %></button>
 
 copylight.
 
