favorite一覧へのページ遷移を完成させた。

--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,6 +1,3 @@
 favorite一覧
 
-<% @user.scomments.each do |scomment| %>
-<%= scomment.content %>
-<%= link_to scomment.user.name, scomment.user %>
-<% end %>
+<%= render 'favorites/favorite' %>
