--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -20,14 +20,12 @@ Statページスタート＞＞
     </strong>
     posts
   </a>
-  <div class="ui labeled button" tabindex="0">
-    <div class="ui button">
-      <i class="heart icon"></i><%= link_to "My favorites", favorites_path(current_user) %>
-    </div>
-    <a class="ui basic label">
-      <%= @user.favorites.count %>
-    </a>
-  </div>
+  <a href="<%= favorite_user_path(@user) %>">
+    <strong id="favorites" class="stat">
+      <%= @user.favorite_scomments.count %>
+    </strong>
+    favorites
+  </a>
 
 ここは、このままでは、starをつけた人のレコードを数えている。(starをもらった人のレコード数にする。)
       <i class="star icon"></i> Star
