--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,6 +8,7 @@
 <button class="ui orange basic button"><%= link_to "Private Policy", users_path %></button>
 <button class="ui orange basic button"><%= link_to "About Stylist", stylists_path %></button>
 <button class="ui orange basic button"><%= link_to "Share on SNS", about_path %></button>
+<button class="ui orange basic button"><%= link_to "Activity Graph", users_path %></button>
 
 copylight.
 
