--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,15 +1,4 @@
 
-
-
-
-
-
-
-
-
-
-
-
 <div class="ui card">
   <div class="content">
     <div class="right floated meta">
@@ -24,8 +13,8 @@
   </div>
   <div class="content">
     <span class="right floated">
-      <i class="heart outline like icon"></i>
-      17 likes
+      <!-- <i class="heart outline like icon"></i>
+      17 likes -->
     </span>
   </div>
   <div class="extra content">
