--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,13 +1,6 @@
 <div class="ui card">
-  <h1>favorite一覧!</h1>
 
+  <h1>わたしがfavoriteしたコメントの一覧</h1>
 
-    <h1>わたしが送ったコメントの一覧</h1>
-    <% @scomments.each do |scomment| %>
-
-        <%= scomment.user_id %></td>
-        <%= scomment.content %></td>
-
-    <% end %>
 
 </div>
