--- a/app/views/users/show_favorite.html.erb
+++ b/app/views/users/show_favorite.html.erb
@@ -1,15 +1,18 @@
 ＞＞users/show_favoriteページはじまり（usersコントローラーのfavoriteより）
 
-<!-- usersコントローラーのfavoriteより -->
+<!-- usersコントローラーのfavoriteメソッドより -->
 
 <% provide(:title, @title) %>
 
-  <%= @scomment.content %>
+<%= gravatar_for @user %>
+<h1><%= @user.name %></h1>
 
+<%= render 'shared/stats' %>
 
+<h3><%= @title %></h3>
+<% if @users.any? %>
+<ul class="users follow">
+  <%= render @users %>
+</ul>
 
-<%= @title %>
-
-  <% if @feed_scomments.any? %>
-    <%= render @feed_scomments %>
-  <% end %>
+<% end %>
