--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,6 @@
 <!-- ユーザーの自己紹介 -->
   <%= gravatar_for @user %>
   <%= @user.name %>
-  <%= render 'shared/stats' %>
 <!-- フォロー、アンフォローボタン -->
   <%= render 'follow_form' if logged_in? %>
 
@@ -15,6 +14,6 @@
   <% end %>
 
 <!-- ポストを公開している場合、一覧を見せる。 -->
-  <a href="<%= posts_path(@user) %>">
-    <h2>See My Posts!</h2>
-  </a>
+    <ol class="posts">
+      <%= render @posts %>
+    </ol>
