ヘッダーのコメントNewボタンの移動先（コメントをスタートさせるページ）を作った。

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
 <% if logged_in? && current_user.stylist? %>
 <button class="ui red basic button"><%= link_to "My Scomments", new_post_path %></button>
 <button class="ui red basic button"><%= link_to "Given Scomments", new_post_path %></button>
-<button class="ui red basic button"><%= link_to "Scomment New", new_post_path %></button>
+<button class="ui green basic button"><%= link_to "Scomment New", start_path %></button>
 
 <% else %>
 <button class="ui green basic button"><%= link_to "Become a Stylist", stylists_path %></button>
