--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="ui segment">
-<button class="ui green basic button"><%= link_to "Home", root_path, id: "logo" %></button>
+<button class="ui green basic button"><%= link_to "Stylatte Logo", root_path, id: "logo" %></button>
 
 <button class="ui green basic button"><%= link_to "All Post", posts_path %></button>
 <button class="ui green basic button"><%= link_to "Post New", new_post_path %></button>
@@ -16,7 +16,7 @@
 <% end %>
 
 <button class="ui orange basic button"><%= link_to "Notes New", users_path %></button>
-<button class="ui orange basic button"><%= link_to "My Notes", users_path %></button>
+<button class="ui orange basic button"><%= link_to "StylingBook", users_path %></button>
 
 
 <button class="ui green basic button"><%= link_to "Find Users", users_path %></button>
