--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -38,4 +38,7 @@
 <% else %>
 <button class="ui green basic button"><%= link_to "Log in", login_path %></button>
 <% end %>
+
+<button class="ui red basic button"><%= link_to "Admin", root_path %></button>
+
 </div>
