--- a/app/views/scomments/got.html.erb
+++ b/app/views/scomments/got.html.erb
@@ -1,14 +1,9 @@
-<div class="ui segment">
-＞＞scomments/_got_scommentsページスタート
-<p>もらったコメント一覧</p>
-<table>
-  <tbody>
-    <% @user.scomments.each do |scomment| %>
-    <tr>
-      <td><%= scomment.content %></td>
-      <td><%= link_to scomment.user.name, scomment.user %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-</div>
+<h1>You got scomments!</h1>
+
+
+  <% @scomments.each do |scomment| %>
+  <div class="ui card">
+    <%= scomment.content %>
+  </div>
+  <%= time_ago_in_words(scomment.created_at) %> ago.
+  <% end %>
