--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,9 @@
 <!-- 星の合計 -->
   <h2>今までもらった星の数!</h2>
   <i class="star icon"><%= @total_rating %></i>
+<!-- 星の平均 -->
+  <h2>今までもらった星の平均!</h2>
+  <i class="star icon"><%= @average_rating %></i>
 
 
 <!-- ユーザーがスタイリストの場合、スタイリングブックをみせる。 -->
