--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,40 +2,78 @@
 <html>
 
 
-  <head>
+<head>
 
+<!-- Copyright 2016, Stylatte.
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License. -->
+<!-- title and more -->
     <title>Stylatte</title>
+    <meta charset="utf-8">
+    <meta name="description" content="Styling from all over the world! New fashion and New myself! 自分に合うスタイリストがみつかる。世界中から、似合うものを提案してもらおう。">
+    <meta name="keywords" content=",Stylatte,stylist,スタイリスト,styling,スタイリング,コーディネート,インフルエンサー">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="">
 
-<!-- turbolinks読み込み -->
-<!-- CSSの読み込み -->
+<!-- OGP (For SNS)-->
+    <!-- <meta property="og:type" content="website">
+    <meta property="og:title" content="">
+    <meta property="og:description" content="">
+    <meta property="og:site_name" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content=""> -->
+
+<!-- CSS -->
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-<!-- jQueryの読み込み -->
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-<!-- IE 9のときのためのもの-->
-    <%= csrf_meta_tags %>
-    <%= render 'shared/shim' %>
-<!-- semanticUI読み込み -->
+<!-- CSS Framework(semanticUI) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 
-  </head>
+<!-- jQuery -->
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+
+<!-- For IE 9-->
+    <%= csrf_meta_tags %>
+    <%= render 'shared/shim' %>
+
+<!-- Google Analytics -->
+    <!-- <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', '固有のコード', 'auto');
+      ga('send', 'pageview');
+    </script> -->
+
+
+</head>
 
 
 
-  <body>
+<body>
 
-<%= render 'shared/header' %>
-<% flash.each do |message_type, message| %>
-<div class="alert alert-<%= message_type %>"><%= message %></div>
-<% end %>
-
-
-<%= yield %>
+  <%= render 'shared/header' %>
+    <% flash.each do |message_type, message| %>
+    <div class="alert alert-<%= message_type %>"><%= message %></div>
+  <% end %>
 
 
-<%= render 'shared/footer' %>
-<%= debug(params) if Rails.env.development? %>
+  <%= yield %>
 
-  </body>
+
+  <%= render 'shared/footer' %>
+    <%= debug(params) if Rails.env.development? %>
+
+</body>
+
 
 </html>
