--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,6 +10,6 @@
 <button class="ui orange basic button"><%= link_to "Share on SNS", about_path %></button>
 <button class="ui orange basic button"><%= link_to "Activity Graph", users_path %></button>
 
-copylight.
+Copyright © 2016 Stylatte. All rights reserved.
 
 </div>
