--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,12 @@
     <link rel="shortcut icon" href="">
 
 <!-- OGP (For SNS)-->
-    <!-- <meta property="og:type" content="website">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
-    <meta property="og:site_name" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content=""> -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="STYLATTE. Your styling from all over the world.">
+    <meta property="og:description" content="Let's find best style for you!">
+    <meta property="og:site_name" content="STYLATTE">
+    <meta property="og:url" content="https://www.stylatte.com">
+    <meta property="og:image" content="">
 
 <!-- CSS -->
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
