--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="ui segment">
-<button class="ui green basic button"><%= link_to "Stylatte Logo", root_path, id: "logo" %></button>
+<%= link_to image_tag("stylatte_50.png", alt: "STYLATTE"), root_path %>
 
 <button class="ui green basic button"><%= link_to "All Post", posts_path %></button>
 <button class="ui green basic button"><%= link_to "Post New", new_post_path %></button>
