--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,4 +23,6 @@ Free, you can get advices from cool friends all over world.
 <%= f.submit "Create my account", class: "btn btn-primary" %>
 <% end %>
 
+This site uses cookies to store your preferences for site-specific language and display options.
+
 ＜＜users/newページおわり
