--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,12 @@
 <h1>StaticPages#help</h1>
 <p>Find me in app/views/static_pages/help.html.erb</p>
+
+プライバシーポリシー
+
+
+よくある質問
+・無料で利用できますか？
+-提案を受ける側、提案する側のユーザーともに無料です。（ただし、一部提案する側のユーザーが応用機能を利用したい場合、有料機能もあります。詳しくは、Stylistになるページをご覧ください。）
+
+・自社の広告をのせてもらうことはできますか？
+-広告募集ページをご覧ください。
