Stylatteのロゴなどimagesに入れたものの書き方は、これを参考にする。

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,4 @@
 <h1>About</h1>
 
 <div class="ui heart rating" data-rating="2"></div>
+<%= link_to image_tag("stylatte_50.png", alt: "STYLATTE"), root_path %>
