ヘッダーとフッターのデザイン変えた。（ボタンリンクをひたすら集めておいていたのをきれいにまとめた。）

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,9 +6,11 @@
 <button class="ui orange basic button"><%= link_to "About", about_path %></button>
 <button class="ui orange basic button"><%= link_to "Contact", contact_path %></button>
 <button class="ui orange basic button"><%= link_to "Private Policy", users_path %></button>
-<button class="ui orange basic button"><%= link_to "About Stylist", stylists_path %></button>
+<button class="ui green basic button"><%= link_to "About Stylist", stylists_path %></button>
 <button class="ui orange basic button"><%= link_to "Share on SNS", about_path %></button>
 <button class="ui orange basic button"><%= link_to "Activity Graph", users_path %></button>
+<!-- まだ作成前のページ -->
+<button class="ui red basic button"><%= link_to "Admin", root_path %></button>
 
 Copyright © 2016 Stylatte. All rights reserved.
 
